<resources>
    <string name="app_name">AndroidCleanArchitecture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">News</string>
    <string name="all_news">News</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Beauty</string>
    <string name="sports">Sport</string>
    <string name="technology">Science</string>
    <string name="filter">Filter</string>
    <string name="details">Details</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="search_keyword">Search Keyword</string>
    <string name="latest_headlines">Latest Headlines</string>
    <string name="no_item_saved">No item saved</string>
    <string name="latest_news">Latest News</string>
    <string name="search_news">Search News</string>
</resources>