<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/itemAllnews"
            android:icon="@drawable/all_news"
            android:title="@string/all_news" />

        <item
            android:id="@+id/itemBusiness"
            android:icon="@drawable/business"
            android:title="@string/business" />

        <item
            android:id="@+id/itemEntertainment"
            android:icon="@drawable/entertainment"
            android:title="@string/entertainment" />

        <item
            android:id="@+id/itemHealth"
            android:icon="@drawable/health"
            android:title="@string/health" />

        <item
            android:id="@+id/itemSports"
            android:icon="@drawable/sports"
            android:title="@string/sports" />

        <item
            android:id="@+id/itemTechnology"
            android:icon="@drawable/technology"
            android:title="@string/technology" />
    </group>

</menu>