<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/searchNewsFragment"
        android:enabled="true"
        android:icon="@drawable/search_news"
        android:title="@string/search" />

    <item
        android:id="@+id/newsFragment"
        android:enabled="true"
        android:icon="@drawable/all_news"
        android:title="@string/news" />

    <item
        android:id="@+id/detailNewsFragment"
        android:enabled="true"
        android:icon="@drawable/filter"
        android:title="@string/details" />

    <item
        android:id="@+id/favoriteNewsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favorite" />

</menu>